# Public-Infrastructure-Service-Access

./: .gitignore  .gitlab-ci.yml  AzuriteConfig  CONTRIBUTING.md  Dockerfile  Public-Infrastructure-Location-Optimiser.code-workspace  README.md  __azurite_db_table__.json  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
Research-Sandbox/abw_maxcover/: README.md  pyproject.toml
Research-Sandbox/abw_maxcover/src/abw_maxcover/: __init__.py  _budgets.py  _incremental_core.py  deployment.py  exact.py  heuristics.py  instance.py  io.py  pareto.py  results.py  validation.py
Research-Sandbox/abw_maxcover/tests/: test_smoke.py
Research-Sandbox/general_distances_per_country/: .gitignore  calibrate_speeds.py  defibrillator_experiments.py  descriptive_healthcare_access_analysis.ipynb  email_to_iana_matrix_speedups.txt  optimization experiments.ipynb  parse_pipeline_logs.py  pyproject.toml  readme.md  routing_experiments.py  run_pipeline.py  solve_vietnam_health_max_cover.py  testdrive_general_country.ipynb
Research-Sandbox/general_distances_per_country/countries/: __init__.py  base.py  che.py  laos.py  liechtenstein.py  luxembourg.py  marshall_islands.py  monaco.py  nauru.py  netherlands.py  nld.py  pol.py  poland.py  portugal.py  prt.py  switzerland.py  timor_leste.py  tls.py  tuvalu.py  vietnam.py
Research-Sandbox/general_distances_per_country/distance_pipeline/: __init__.py  boundaries.py  cache.py  candidate_builder.py  candidate_sites.py  config_loader.py  distance_matrix.py  facilities.py  io.py  manifest.py  network.py  pipeline_support.py  population.py  routing.py  settings.py  snapping.py  source_tables.py  use_openai.py  viz.py  water.py
Research-Sandbox/general_distances_per_country/src/abw_distance_matrix/: README.md  __init__.py  api.py  cli.py  speed_calibration.py
Research-Sandbox/general_distances_per_country/tests/: conftest.py  test_distance_matrix.py  test_network.py  test_package.py  test_pbf_overrides.py  test_population.py  test_viz_roads.py
Research-Sandbox/scalable_general_distances_per_country/: .gitignore  CONSISTENCY_WITH_ORIGINAL.md  README.md  SHARED_CACHE_VALIDATION.md  github_pipeline_comparisons.md  luxembourg_architecture_comparison.md  pyproject.toml  shared_cache_validation_report.md
Research-Sandbox/scalable_general_distances_per_country/examples/: timor_leste_schools.yaml
Research-Sandbox/scalable_general_distances_per_country/notebooks/: architecture_basic_tests.ipynb  luxembourg_api_illustration.ipynb  luxembourg_school_case_architecture.ipynb  luxembourg_timor_leste_new_pipeline.tex  wfp_distance_replication_from_readme.ipynb  wfp_location_routing_experiment.ipynb  wfp_retirement_luxembourg_school_case.ipynb
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/: __init__.py  api.py  candidates.py  cli.py  layers.py  manifest.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/artifacts/: __init__.py  decorators.py  runner.py  spec.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/config/: __init__.py  country.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/core/: context.py  registry.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/data/: __init__.py  frame.py  registry.py  schemas.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/facilities/: __init__.py  osm.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/geocoding/: __init__.py  base.py  pipeline.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/geospatial/: __init__.py  backend.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/io/: __init__.py  downloads.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/matrix/: __init__.py  dense.py  split.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/network/: __init__.py  osm.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/optimization/: __init__.py  base.py  facility_location.py  tsp.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/pipeline/: __init__.py  runner.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/population/: __init__.py  raster.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/routing/: base.py  registry.py  strategies.py
Research-Sandbox/scalable_general_distances_per_country/src/scalable_distances/storage/: __init__.py  repository.py
Research-Sandbox/scalable_general_distances_per_country/tests/: golden_minidata.py  test_facility_location_solvers.py  test_layer_and_dense_parity.py  test_networkx_router_smoke.py  test_split_matrix_smoke.py  test_tsp_solver.py
Research-Sandbox/scalable_general_distances_per_country/tools/: validate_shared_cache.py
_modules/: index.html
_sources/: index.md.txt
autoapi/: index.html
docs/: conf.py  index.md
examples/: Optimization Workshop.ipynb  context_layers_showcase.ipynb  gpbp_showcase.ipynb  pisa_showcase.ipynb  pisa_showcase_PK.ipynb  pisa_showcase_mapbox.ipynb  pisa_showcase_osm.html  pisa_showcase_osm.ipynb
flaskr/: __init__.py
gpbp/: constants.py  data_src.py  distance.py  layers.py  utils.py  visualisation.py
gpbp_app/: main_page.py  results.pkl
gpbp_osm/: constants.py  data_src.py  distance.py  layers.py  road_network.py  utils.py  visualisation.py
optimization/: jg_experiments.ipynb  jg_opt.py  jg_util.py  maxcovering.py  readme.md
pisa/: administrative_area.py  administrative_area_boundaries.py  constants.py  facilities.py  isopolygons.py  isopolygons_mapbox.py  osm_road_network.py  population.py  population_served.py  population_served_by_isopolygons.py  road_network.py  roadnetwork.py  utils.py  visualisation.py  visualization.py
pisa_abw/: administrative_area.py  facilities.py  (+6 more)
(+357 files in other folders)
