[tool.poetry]
name = "gpbp_osm"
version = "0.1.0"
description = ""
authors = ["EiriniK <Eirini.Kousathana@ortec.com>"]
readme = "README.md"
packages = [{include = "gpbp_osm"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = ">=0.11"
networkx = ">=2.8"
pyproj = ">=3.3"
requests = ">=2.28"
rtree = ">=1.0"
osmnx = "^1.2.2"
ipykernel = "^6.16.2"
folium = "^0.13.0"
wget = "^3.2"
pycountry = "^22.3.5"
countryinfo = "^0.1.2"
h3 = "^3.7.4"
scikit-learn = "^1.1.3"
descartes = "^1.1.0"
rasterio = "^1.3.3"
hdx-python-api = "^5.9.2"
flask = "^2.2.2"
gadm = "^0.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "gpbp_osm"
] 