[tool.poetry]
name = "gpbp"
version = "0.1.0"
description = ""
authors = ["EiriniK <Eirini.Kousathana@ortec.com>"]
readme = "README.md"
packages = [{include = "gpbp"}]

[tool.poetry.dependencies]
python = "3.10.*"
geopandas = ">=0.11"
networkx = ">=2.8"
pyproj = ">=3.3"
requests = ">=2.28"
rtree = ">=1.0"
osmnx = "^1.2.2"
ipykernel = "^6.16.2"
folium = "^0.13.0"
wget = "^3.2"
pycountry = "^22.3.5"
scikit-learn = "^1.1.3"
descartes = "^1.1.0"
rasterio = "^1.3.3"
hdx-python-api = "^5.9.2"
gadm = "^0.0.3"
setuptools = "^65.6.0"
pygeos = "0.12"
numpy = "^1.23.5"
tables = "^3.7.0"
pandana = "*"
osmxtract = "^0.0.1"
gurobipy = "*"
highspy  = "*"
pyomo = "^6.4.3"
jupyter-utils = "^1.2.6"
jupyter = "^1.0.0"
streamlit = "^1.15.2"
streamlit-folium = "^0.20.0"
nbclient = "^0.7.2"
shapely = "^1.8.5.post1"
plotly = "^5.22.0"
streamlit-plotly-events = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "gpbp"
addopts = "--cov=gpbp"