[tool.poetry]
name = "pisa_abw"
version = "2.0.0"
description = "Estimate and optimize service coverage of public infrastructure facilities."
authors = ["EiriniK <Eirini.Kousathana@ortec.com>"]
readme = "README.md"
packages = [
    {include = "pisa"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
geopandas = "^1.0.1"
networkx = ">=2.8"
pyproj = ">=3.3"
requests = ">=2.28"
osmnx = "^2.0.1"
ipykernel = "^6.16.2"
folium = "^0.13.0"
pycountry = "22.3.5"
rasterio = "^1.3.3"
hdx-python-api = "^5.9.2"
gadm = "^0.0.3"
pygeos = "0.12"
numpy = "^1.23.5"
pandana = "*"
osmxtract = "^0.0.1"
gurobipy = "*"
highspy  = "*"
pyomo = "^6.4.3"
jupyter-utils = "^1.2.6"
jupyter = "^1.0.0"
streamlit = "^1.15.2"
streamlit-folium = "^0.20.0"
nbclient = "^0.7.2"
shapely = "^2.0.6"
plotly = "^5.22.0"
streamlit-plotly-events = "^0.0.6"
matplotlib = "^3.10.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["pisa"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
